2008-04-30  kitone  <kitone@gna.org>

	* src/gui/WaveformGeneratorUI.cc:
	* src/gui/WaveformGeneratorUI.h:
	Remove files.

2008-04-30  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/we/WaveformGenerator.cc:
	* src/we/WaveformGenerator.h:
	Add new files for WaveformGenerator. 
	Removes old files (src/gui/WaveformGeneratorUI.h/cc).

	* src/actions/WaveformManagement.cc:
	Update with the new WaveformGenerator, add save waveform code.

	* src/utility.cc:
	* src/utility.h:
	Add function check_registry (gstreamer).

2008-04-25  kitone  <kitone@gna.org>

	* src/we/WaveformEditor.cc:
	* src/we/WaveformEditor.h:
	Add function redraw_renderer.

2008-04-16  kitone  <kitone@gna.org>

	* share/glade/dialog-preferences.glade:
	* src/gui/PreferencesUI.cc:
	Update with the new WaveformRenderer.

	* src/we/WaveformRenderer.cc:
	* src/we/WaveformRenderer.h:
	* src/we/WaveformRendererCairo.cc:
	* src/we/WaveformRendererGL.cc:
	Add force_redraw_all.

2008-04-16  kitone  <kitone@gna.org>

	* src/actions/WaveformEditor.cc:
	* src/actions/WaveformEditor.h:
	* src/actions/WaveformRenderer.cc:
	* src/actions/WaveformRenderer.h:
	* src/actions/WaveformRendererCairo.cc:
	* src/actions/WaveformRendererGL.cc:
	Move the files to src/we/

	* src/Makefile.am:
	* src/SubtitleEditorWindow.h:
	* src/actions/WaveformManagement.cc:
	* src/gui/Application.h:
	Update with new locations.

2008-04-15  kitone  <kitone@gna.org>

	* src/gui/GStreamerPlayer.cc:
	* src/gui/GStreamerPlayer.h:
	* src/gui/MPlayer.cc:
	* src/gui/MPlayer.h:
	* src/gui/MenuBar.cc:
	* src/gui/Player.cc:
	* src/gui/Player.h:
	* src/gui/VideoPlayer.cc:
	* src/gui/VideoPlayer.h:
	Remove files.

	* configure.in:
	Add link to lgstpbutils-0.10.

	* share/glade/subtitleeditor.glade:
	Updated with the new VideoPlayer and WaveformEditor.

	* share/menubar.xml:
	Updated with the new video player.

	* src/Makefile.am:
	* src/Player.h:
	* src/SubtitleEditorWindow.h:
	* src/actions/VideoPlayerManagement.cc:
	* src/actions/WaveformEditor.cc: