@@ -1,3 +1,12 @@
+2008-05-04  kitone  <kitone@gna.org>
+
+	* configure.in:
+	* src/main.cc:
+	* src/we/WaveformEditor.cc:
+	* src/we/WaveformRendererGL.cc:
+	OpenGL support can be enabled or disabled with configure --enable-gl and
+	--disable-gl. It's disable by default.
+
 2008-04-30  kitone  <kitone@gna.org>
 
 	* src/gui/WaveformGeneratorUI.cc:
